--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,29 +1,33 @@
-name: Tests
+name: CI
 
 on:
   push:
-    branches: [ "main" ]
+    branches:
+      - main
   pull_request:
-    branches: [ "main" ]
-
-permissions:
-  contents: read
+    branches:
+      - main
 
 jobs:
   test:
+    name: ${{ format('Unit tests (Ruby {0})', matrix.ruby-version) }}
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
-        ruby-version: ['3.1', '3.2', '3.3', '3.4']
+        ruby-version:
+          - "3.1"
+          - "3.2"
+          - "3.3"
+          - "3.4"
+    continue-on-error: true
     steps:
     - uses: actions/checkout@v4
-    - name: Set up Ruby
+    - name: Set up Ruby and install gems
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby-version }}
         bundler-cache: true
-    - name: Configure git user name, email
+    - name: Configure Git
       run: |
         git config --global user.name $NAME
         git config --global user.email $EMAIL
