--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,6 +9,21 @@ on:
       - main
 
 jobs:
+  rubocop:
+    name: RuboCop
+    runs-on: ubuntu-latest
+    env:
+      BUNDLE_ONLY: rubocop
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Ruby and install gems
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: 3.3.0
+          bundler-cache: true
+      - name: Run Rubocop
+        run: bundle exec rubocop --parallel
   test:
     name: ${{ format('Unit tests (Ruby {0})', matrix.ruby-version) }}
     runs-on: ubuntu-latest
@@ -21,18 +36,19 @@ jobs:
           - "3.4"
     continue-on-error: true
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Ruby and install gems
-      uses: ruby/setup-ruby@v1
-      with:
-        ruby-version: ${{ matrix.ruby-version }}
-        bundler-cache: true
-    - name: Configure Git
-      run: |
-        git config --global user.name $NAME
-        git config --global user.email $EMAIL
-      env:
-        NAME: "George Costanza"
-        EMAIL: "george.costanza@vandelay.com"
-    - name: Run tests
-      run: bundle exec rake test
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Setup Ruby and install gems
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ matrix.ruby-version }}
+          bundler-cache: true
+      - name: Configure Git
+        run: |
+          git config --global user.name $NAME
+          git config --global user.email $EMAIL
+        env:
+          NAME: "George Costanza"
+          EMAIL: "george.costanza@vandelay.com"
+      - name: Run tests
+        run: bundle exec rake test
